Breaks the chart but fixes x axis

--- a/styles.css
+++ b/styles.css
@@ -25,3 +25,7 @@ svg{
 .bar:hover{
     fill: #17252A
 }
+
+g{
+    color: #17252A
+}
